# chatbot

./: .gitignore  airy-environs-379419-6edf47c20313.json  chatbot.db  pyproject.toml  requirements.txt
chatbot/: api.py  main.py
