[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["hectoradrian961030 <hectoradrian961030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
